--- a/app/src/main/res/layout/activity_validate_pin.xml
+++ b/app/src/main/res/layout/activity_validate_pin.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_60sdp"
             android:fontFamily="@font/opensans_bold"
-            android:text="Choose your PIN"
+            android:text="@string/enter_your_pin"
             android:textAlignment="center"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_16ssp" />
