--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -497,7 +497,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="@string/privay_policy"
+                        android:text="@string/privacy_policy"
                         android:textColor="@color/primary_green"
                         android:textSize="@dimen/_11ssp"
                         android:visibility="gone" />
