--- a/app/src/main/res/layout/activity_check_out_payment.xml
+++ b/app/src/main/res/layout/activity_check_out_payment.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/backgrndbtmcornrs"
             android:orientation="vertical"
-            android:paddingTop="@dimen/_40sdp"
+            android:paddingTop="@dimen/_25sdp"
             android:paddingRight="@dimen/_21sdp"
             android:paddingBottom="@dimen/_11sdp">
 
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/pay_to_merchant"
@@ -193,7 +193,7 @@
                                     android:gravity="center_vertical|end"
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
-                                    android:maxLength="@string/maxlength"
+                                    android:maxLength="13"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
