--- a/app/src/main/res/layout/activity_merchant_transactions_list.xml
+++ b/app/src/main/res/layout/activity_merchant_transactions_list.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
-        android:paddingRight="@dimen/_21sdp"
+        android:paddingEnd="@dimen/_21sdp"
         android:paddingBottom="@dimen/_16sdp">
 
         <ImageView
@@ -53,7 +53,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/_9sdp"
-                    android:src="@drawable/ic_search_icon" />
+                    android:src="@drawable/ic_search_icon"
+                    android:contentDescription="@string/search_button" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,11 +65,9 @@
                         android:id="@+id/searchET"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_alignParentStart="true"
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:layout_toLeftOf="@id/filtericonIV"
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
@@ -88,18 +87,17 @@
                         android:layout_width="@dimen/_1sdp"
                         android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/_6sdp"
-                        android:layout_marginRight="@dimen/_11sdp"
+                        android:layout_marginEnd="@dimen/_11sdp"
                         android:layout_marginBottom="@dimen/_6sdp"
-                        android:layout_toLeftOf="@id/filtericonIV"
                         android:background="@color/dark_color_bg" />
 
                     <ImageView
                         android:id="@+id/filtericonIV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:paddingRight="@dimen/_14sdp"
-                        android:src="@drawable/ic_filter_enabled" />
+                        android:layout_marginEnd="@dimen/_14sdp"
+                        android:src="@drawable/ic_filtericon"
+                        android:contentDescription="@string/filter" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
