--- a/app/src/main/res/layout/activity_team_member.xml
+++ b/app/src/main/res/layout/activity_team_member.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
-    android:orientation="vertical"
     tools:context=".view.business.TeamMemberActivity">
 
     <LinearLayout
+        android:id="@+id/topbackLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:background="@drawable/bottomradius"
         android:paddingLeft="@dimen/_21sdp"
         android:paddingTop="@dimen/_20sdp">
@@ -19,7 +20,6 @@
             android:id="@+id/bpbackBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_marginTop="@dimen/_35sdp"
             android:layout_marginBottom="@dimen/_16sdp"
             android:gravity="center_vertical"
@@ -35,11 +35,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="@dimen/_35sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Team"
+            android:gravity="center"
             android:paddingEnd="@dimen/_40sdp"
+            android:text="Team"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
@@ -47,12 +47,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/topbackLL"
+        android:fillViewport="true"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/_144sdp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -92,7 +95,6 @@
                             <androidx.cardview.widget.CardView
                                 android:layout_width="@dimen/_47sdp"
                                 android:layout_height="@dimen/_47sdp"
-                                android:layout_alignParentRight="true"
                                 android:layout_gravity="center"
                                 app:cardBackgroundColor="@color/primary_green"
                                 app:cardCornerRadius="@dimen/_24sdp"
@@ -144,9 +146,9 @@
                             android:id="@+id/name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_semibold"
                             android:text=""
-                            android:layout_marginTop="@dimen/_5sdp"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
@@ -191,8 +193,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_4sdp"
-                android:layout_marginBottom="@dimen/_141sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
@@ -283,128 +285,133 @@
                         android:background="@color/light_gray" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/nextCV"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="@dimen/_22sdp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_13sdp"
-                    android:layout_marginBottom="@dimen/_13sdp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_5sdp"
-                        android:contentDescription="change"
-                        android:src="@drawable/ic_icon_awesome_pen" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="Edit"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_12ssp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cancelCv"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/_22sdp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_13sdp"
-                    android:layout_marginBottom="@dimen/_13sdp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="Cancel"
-                        android:textColor="@color/error_red"
-                        android:textSize="@dimen/_12ssp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/resendInvitationCV"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="@dimen/_22sdp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_13sdp"
-                    android:layout_marginBottom="@dimen/_13sdp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="Resend Invitation"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_12ssp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/removeCv"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/_22sdp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_13sdp"
-                    android:layout_marginBottom="@dimen/_13sdp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="Remove This Member"
-                        android:textColor="@color/error_red"
-                        android:textSize="@dimen/_12ssp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-
         </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/et_bg_gray"
+        android:layout_alignParentBottom="true"
+        android:paddingTop="@dimen/_10sdp"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/nextCV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_43sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            app:cardBackgroundColor="@color/primary_green"
+            app:cardCornerRadius="@dimen/_22sdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:layout_marginBottom="@dimen/_13sdp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:contentDescription="change"
+                    android:src="@drawable/ic_icon_awesome_pen" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Edit"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cancelCv"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_43sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            android:layout_marginBottom="@dimen/_30sdp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_22sdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:layout_marginBottom="@dimen/_13sdp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Cancel"
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/resendInvitationCV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_43sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            app:cardBackgroundColor="@color/primary_green"
+            app:cardCornerRadius="@dimen/_22sdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:layout_marginBottom="@dimen/_13sdp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Resend Invitation"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/removeCv"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_43sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            android:layout_marginBottom="@dimen/_30sdp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_22sdp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:layout_marginBottom="@dimen/_13sdp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Remove This Member"
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</RelativeLayout>
