--- a/app/src/main/res/drawable/ic_customerprofile.xml
+++ b/app/src/main/res/drawable/ic_customerprofile.xml
@@ -1,206 +1,209 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="143.111dp"
-    android:height="184.076dp"
-    android:viewportWidth="143.111"
-    android:viewportHeight="184.076">
+    android:width="119.488dp"
+    android:height="135.381dp"
+    android:viewportWidth="119.488"
+    android:viewportHeight="135.381">
   <path
-      android:pathData="M121.838,10L121.838,148.156A10,10 0,0 1,111.838 158.156L29.513,158.156A10,10 0,0 1,19.513 148.156L19.513,10A10,10 0,0 1,29.513 0L111.838,0A10,10 0,0 1,121.838 10z"
+      android:pathData="M104.333,10L104.333,102.662A10,10 0,0 1,94.333 112.662L41.442,112.662A10,10 0,0 1,31.442 102.662L31.442,10A10,10 0,0 1,41.442 0L94.333,0A10,10 0,0 1,104.333 10z"
       android:strokeWidth="1"
       android:fillColor="#d8e2f0"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M121.338,10L121.338,148.156A9.5,9.5 0,0 1,111.838 157.656L29.513,157.656A9.5,9.5 0,0 1,20.013 148.156L20.013,10A9.5,9.5 0,0 1,29.513 0.5L111.838,0.5A9.5,9.5 0,0 1,121.338 10z"
+      android:pathData="M103.833,10L103.833,102.662A9.5,9.5 0,0 1,94.333 112.162L41.442,112.162A9.5,9.5 0,0 1,31.942 102.662L31.942,10A9.5,9.5 0,0 1,41.442 0.5L94.333,0.5A9.5,9.5 0,0 1,103.833 10z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M90.952,170.719L10,170.719a9.51,9.51 0,0 1,-9.5 -9.5L0.5,23.075A9.51,9.51 0,0 1,10 13.575L82.052,13.575l18.4,18.3L100.452,161.219A9.51,9.51 0,0 1,90.952 170.719Z"
+      android:pathData="M79.598,121.611L27.398,121.611a9.511,9.511 0,0 1,-9.5 -9.5L17.898,19.17A9.51,9.51 0,0 1,27.398 9.67L75.989,9.67L89.098,22.71v89.4A9.511,9.511 0,0 1,79.598 121.611Z"
       android:strokeWidth="1"
       android:fillColor="#e5f3e5"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M80.94,12.827L100.754,31.98C101.285,32.494 101.285,33.158 101.107,33.609C100.929,34.06 100.476,34.546 99.737,34.558L80.254,34.889C79.853,34.896 79.474,34.746 79.186,34.468C78.898,34.189 78.735,33.815 78.728,33.415L78.398,13.931C78.385,13.193 78.856,12.723 79.3,12.53C79.744,12.337 80.409,12.314 80.94,12.827Z"
+      android:pathData="M76.098,10.207L88.215,21.919C88.746,22.433 88.746,23.098 88.568,23.548C88.39,23.999 87.937,24.485 87.198,24.498L75.283,24.7C74.882,24.707 74.503,24.557 74.215,24.279C73.927,24 73.765,23.626 73.758,23.226L73.556,11.311C73.543,10.572 74.013,10.102 74.458,9.909C74.902,9.716 75.566,9.693 76.098,10.207Z"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M79.533,34.108C79.725,34.294 79.978,34.394 80.245,34.389L99.728,34.058C100.348,34.048 100.584,33.571 100.642,33.426C100.699,33.28 100.852,32.77 100.406,32.34L80.592,13.187C80.147,12.756 79.643,12.926 79.499,12.989C79.355,13.051 78.887,13.303 78.898,13.923L79.228,33.406C79.233,33.673 79.341,33.923 79.533,34.108M78.838,34.827C78.47,34.472 78.238,33.975 78.228,33.423L77.898,13.94C77.867,12.158 80.006,11.23 81.287,12.468L101.101,31.621C102.383,32.859 101.527,35.028 99.745,35.058L80.262,35.389C79.71,35.398 79.206,35.183 78.838,34.827Z"
+      android:pathData="M74.563,23.919C74.755,24.105 75.007,24.205 75.274,24.2L87.189,23.998C87.809,23.987 88.045,23.511 88.103,23.365C88.16,23.219 88.313,22.71 87.868,22.279L75.75,10.566C75.305,10.135 74.801,10.306 74.657,10.368C74.513,10.43 74.045,10.682 74.055,11.302L74.258,23.217C74.262,23.484 74.37,23.734 74.563,23.919M73.868,24.638C73.5,24.283 73.267,23.786 73.258,23.234L73.056,11.319C73.025,9.538 75.164,8.609 76.445,9.847L88.563,21.56C89.844,22.798 88.988,24.967 87.206,24.998L75.291,25.2C74.739,25.209 74.236,24.994 73.868,24.638Z"
       android:fillColor="#008581"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.074,91.04h41.202v3.987h-41.202z"
+      android:pathData="M53.212,64.852h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,91.54h40.202v2.987h-40.202z"
+      android:pathData="M53.712,65.352h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,97.685h41.202v3.987h-41.202z"
+      android:pathData="M53.212,69.586h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,98.185h40.202v2.987h-40.202z"
+      android:pathData="M53.712,70.086h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,105.66h41.202v3.987h-41.202z"
+      android:pathData="M53.212,75.267h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,106.16h40.202v2.987h-40.202z"
+      android:pathData="M53.712,75.767h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,112.305h41.202v3.987h-41.202z"
+      android:pathData="M53.212,80h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,112.805h40.202v2.987h-40.202z"
+      android:pathData="M53.712,80.5h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,118.951h41.202v3.987h-41.202z"
+      android:pathData="M53.212,84.734h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,119.451h40.202v2.987h-40.202z"
+      android:pathData="M53.712,85.234h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,125.596h41.202v3.987h-41.202z"
+      android:pathData="M53.212,89.468h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,126.096h40.202v2.987h-40.202z"
+      android:pathData="M53.712,89.968h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,133.571h41.202v3.987h-41.202z"
+      android:pathData="M53.212,95.149h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,134.071h40.202v2.987h-40.202z"
+      android:pathData="M53.712,95.649h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M50.074,140.216h41.202v3.987h-41.202z"
+      android:pathData="M53.212,99.883h29.35v2.84h-29.35z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M50.574,140.716h40.202v2.987h-40.202z"
+      android:pathData="M53.712,100.383h28.35v1.84h-28.35z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M8.873,92.369h31.898v6.645h-31.898z"
+      android:pathData="M23.863,65.799h22.723v4.734h-22.723z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M9.373,92.869h30.898v5.645h-30.898z"
+      android:pathData="M24.363,66.299h21.723v3.734h-21.723z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M8.873,118.951h31.898v6.645h-31.898z"
+      android:pathData="M23.863,84.735h22.723v4.734h-22.723z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M9.373,119.451h30.898v5.645h-30.898z"
+      android:pathData="M24.363,85.235h21.723v3.734h-21.723z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M8.873,101.673h31.898v6.645h-31.898z"
+      android:pathData="M23.863,72.426h22.723v4.734h-22.723z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M9.373,102.173h30.898v5.645h-30.898z"
+      android:pathData="M24.363,72.926h21.723v3.734h-21.723z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M8.873,128.255h31.898v6.645h-31.898z"
+      android:pathData="M23.863,91.362h22.723v4.734h-22.723z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M9.373,128.755h30.898v5.645h-30.898z"
+      android:pathData="M24.363,91.862h21.723v3.734h-21.723z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M8.873,109.647h31.898v6.645h-31.898z"
+      android:pathData="M23.863,78.107h22.723v4.734h-22.723z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M9.373,110.147h30.898v5.645h-30.898z"
+      android:pathData="M24.363,78.607h21.723v3.734h-21.723z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M8.873,137.558h31.898v6.645h-31.898z"
+      android:pathData="M23.863,97.989h22.723v4.734h-22.723z"
       android:strokeWidth="1"
       android:fillColor="#fff"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M9.373,138.058h30.898v5.645h-30.898z"
+      android:pathData="M24.363,98.489h21.723v3.734h-21.723z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M110.549,151.514m-32.563,0a32.563,32.563 0,1 1,65.126 0a32.563,32.563 0,1 1,-65.126 0"
+      android:pathData="M96.291,107.93m-23.196,0a23.196,23.196 0,1 1,46.392 0a23.196,23.196 0,1 1,-46.392 0"
       android:strokeWidth="1"
       android:fillColor="#65ffd0"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M110.549,151.514m-32.063,0a32.063,32.063 0,1 1,64.126 0a32.063,32.063 0,1 1,-64.126 0"
+      android:pathData="M96.291,107.93m-22.696,0a22.696,22.696 0,1 1,45.392 0a22.696,22.696 0,1 1,-45.392 0"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M49.41,44.522m-9.304,0a9.304,9.304 0,1 1,18.608 0a9.304,9.304 0,1 1,-18.608 0"
+      android:pathData="M52.739,31.714m-6.627,0a6.627,6.627 0,1 1,13.254 0a6.627,6.627 0,1 1,-13.254 0"
       android:strokeWidth="1"
       android:fillColor="#ebffd0"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M49.41,44.522m-8.804,0a8.804,8.804 0,1 1,17.608 0a8.804,8.804 0,1 1,-17.608 0"
+      android:pathData="M52.739,31.714m-6.127,0a6.127,6.127 0,1 1,12.254 0a6.127,6.127 0,1 1,-12.254 0"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M44.132,53.825L56.018,53.825a12,12 0,0 1,12 12L68.018,79.078a0,0 0,0 1,0 0L32.132,79.078a0,0 0,0 1,0 0L32.132,65.825A12,12 0,0 1,44.132 53.825Z"
+      android:pathData="M52.431,38.342h1.563a12,12 0,0 1,12 12v5.989a0,0 0,0 1,0 0L40.431,56.331a0,0 0,0 1,0 0L40.431,50.342A12,12 0,0 1,52.431 38.342Z"
       android:strokeWidth="1"
       android:fillColor="#00a6a2"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M44.132,54.325L56.018,54.325A11.5,11.5 0,0 1,67.518 65.825L67.518,78.078a0.5,0.5 0,0 1,-0.5 0.5L33.132,78.578a0.5,0.5 0,0 1,-0.5 -0.5L32.632,65.825A11.5,11.5 0,0 1,44.132 54.325Z"
+      android:pathData="M52.431,38.842h1.563A11.5,11.5 0,0 1,65.494 50.342v4.989a0.5,0.5 0,0 1,-0.5 0.5L41.431,55.831a0.5,0.5 0,0 1,-0.5 -0.5L40.931,50.342A11.5,11.5 0,0 1,52.431 38.842Z"
       android:strokeWidth="1"
       android:fillColor="#00000000"
       android:strokeColor="#008581"/>
   <path
-      android:pathData="M126.499,140.548 L104.567,162.478 94.599,152.51"
+      android:pathData="M107.652,100.119 L92.029,115.741 84.929,108.64"
       android:strokeLineJoin="round"
       android:strokeWidth="3"
       android:fillColor="#00000000"
       android:strokeColor="#008581"
       android:strokeLineCap="round"/>
+  <path
+      android:pathData="M0,133.38a59,2 0,1 0,118 0a59,2 0,1 0,-118 0z"
+      android:fillColor="@color/vlight_gray"/>
 </vector>
