--- a/app/src/main/res/layout/fragment_action_required.xml
+++ b/app/src/main/res/layout/fragment_action_required.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/backgrndbtmcornrs">
+        android:background="@drawable/backgrndbtmcornrs"
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/ll_profile_header"
@@ -125,7 +126,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true"
         android:scrollbars="none">
 
@@ -148,7 +149,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@color/white"
                     android:gravity="center"
                     android:orientation="vertical">
