--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/backgrndbtmcornrs">
+        android:background="@drawable/backgrndbtmcornrs"
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/ll_profile_header"
@@ -102,6 +103,7 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/_8ssp" />
             </androidx.cardview.widget.CardView>
+
                 <ImageView
                     android:id="@+id/iv_notifications"
                     android:layout_width="wrap_content"
