--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -14,7 +14,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/backgrndbtmcornrs">
+            android:background="@drawable/backgrndbtmcornrs"
+            android:visibility="gone">
 
             <LinearLayout
                 android:id="@+id/ll_profile_header"
