--- a/app/src/main/res/layout/activity_reserve_details.xml
+++ b/app/src/main/res/layout/activity_reserve_details.xml
@@ -525,7 +525,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/_11sdp"
                         android:layout_marginTop="@dimen/_6sdp"
-                        android:layout_marginBottom="@dimen/_45sdp"
                         app:cardCornerRadius="@dimen/_10sdp"
                         app:cardElevation="0dp">
 
@@ -546,6 +545,31 @@
 
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/noTransactionsTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="@string/you_have_no_transactions"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/_10ssp"
+                    android:visibility="gone" />
+                <TextView
+                    android:id="@+id/noMoreTransactionsTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="@string/you_have_no_more_transactions"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/_10ssp"
+                    android:visibility="gone" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_30sdp" />
 
             </LinearLayout>
         </LinearLayout>
