--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -369,7 +369,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_11sdp"
                                 android:layout_marginBottom="@dimen/_22sdp"
-
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/merchant_balance"
                                 android:textColor="@color/dark_grey"
