--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -590,48 +590,55 @@
                         android:layout_marginBottom="@dimen/_12sdp"
                         android:background="@color/light_gray" />
 
-                    <TextView
-                        android:id="@+id/tvWebHead"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_1sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text=""
-                        android:textColor="@color/dark_grey"
-                        android:textSize="@dimen/_11ssp" />
-
                     <LinearLayout
+                        android:id="@+id/websiteLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:visibility="gone"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/httpHeader"
+                            android:id="@+id/tvWebHead"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_7sdp"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:text="https://"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:layout_marginBottom="@dimen/_1sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text=""
+                            android:textColor="@color/dark_grey"
+                            android:textSize="@dimen/_11ssp" />
 
-                        <TextView
-                            android:id="@+id/website"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_7sdp"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/httpHeader"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/_7sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:text="https://"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12ssp"
+                                android:visibility="gone" />
+
+                            <TextView
+                                android:id="@+id/website"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/_7sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12ssp" />
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_1sdp"
+                            android:layout_marginBottom="@dimen/_12sdp"
+                            android:background="@color/light_gray" />
                     </LinearLayout>
-
-                    <View
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_1sdp"
-                        android:layout_marginBottom="@dimen/_12sdp"
-                        android:background="@color/light_gray"
-
-                        />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -883,39 +890,40 @@
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:orientation="vertical"
-                app:cardCornerRadius="@dimen/_10sdp">
-
                 <LinearLayout
-                    android:id="@+id/boLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:background="@drawable/backgrndallcornrs"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    app:cardCornerRadius="@dimen/_10sdp">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/boRecycler"
+                    <LinearLayout
+                        android:id="@+id/boLL"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/boRecycler"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/noBOTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/_20sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
+                        android:text="No Beneficial Owners Found"
+                        android:textColor="@color/light_gray"
+                        android:textSize="@dimen/_10ssp"
+                        android:visibility="gone" />
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/noBOTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_20sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:gravity="center"
-                    android:text="No Beneficial Owners Found"
-                    android:textColor="@color/light_gray"
-                    android:textSize="@dimen/_10ssp"
-                    android:visibility="gone" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
