--- a/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
+++ b/app/src/main/res/layout/review_application_beneficial_owners_list_item.xml
@@ -3,14 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/backgrndallcornrs"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_16sdp"
-        app:cardCornerRadius="@dimen/_10sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -243,10 +238,5 @@
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_10ssp" />
             </LinearLayout>
-
-
-
-
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
