Fixed the issues

--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -67,7 +67,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="Fire BBQ"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_14ssp" />
 
